--- a/blog/2022-06-01-about/2022-06-01-about.md
+++ b/blog/2022-06-01-about/2022-06-01-about.md
@@ -1,10 +1,12 @@
 ---
-sidebar_position: 1
+slug: about
+authors: 해승
+tags: [about]
 ---
 
 # 소개
 
-![](../static/img/avatar.PNG)
+![](avatar.PNG)
 
 웹개발자입니다.👨‍💻  
 늘 '왜?'를 생각하고 이에 대한 대답을 찾기 위해 노력합니다.
@@ -34,14 +36,14 @@ sidebar_position: 1
 
 맡은 업무: 백엔드
 - 데이터베이스 구현
-  - 스키마 작성(각 모델 및 모델 간 연결)
+    - 스키마 작성(각 모델 및 모델 간 연결)
 - 서버 구현
-  - GraphQL 방식으로 통신(Express, Apollo-Server-Express, Type-GraphQL 사용)
-  - TypeORM
-  - Auth: Passport로 oAuth 구현(로컬 유저 인증은 직접 구현), JWT 사용
+    - GraphQL 방식으로 통신(Express, Apollo-Server-Express, Type-GraphQL 사용)
+    - TypeORM
+    - Auth: Passport로 oAuth 구현(로컬 유저 인증은 직접 구현), JWT 사용
 - 배포 업무
-  - 중간 배포 및 이슈 핸들링
+    - 중간 배포 및 이슈 핸들링
 - 기획
-  - 커뮤니티 기능 추가 제안
+    - 커뮤니티 기능 추가 제안
 
 [깃헙 서버 레포](https://bit.ly/new-meta-server)
