--- a/docs/modern-javascript/변수.md
+++ b/docs/modern-javascript/변수.md
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-### 변수란?
+## 변수란?
 
 데이터는 메모리에 저장된다.
 메모리는 1바이트로 이루어진 메모리 셀의 집합체이다.
@@ -12,12 +12,12 @@ sidebar_position: 1
 2. 자바스크립트 엔진은 변수명과 매핑된 메모리 주소를 통해
 3. 해당 메모리에 저장된 값을 반환
 
-### 식별자 (identifier)
+## 식별자 (identifier)
 변수명만 식별자인 것은 아니다.
 함수명도 식별자다. (자바스크립트에서 함수는 값이다.) 값을 메모리에 저장하고, 해당 메모리 위치에 함수명을 부여한 것이기 때문이다.
 어떤 값을 다른 값과 구별할 수 있는 고유한 이름이면 식별자다. 
 
-### 변수 선언
+## 변수 선언
 자바스크립트의 엔진은 변수 선언을 2단계에 거쳐 수행한다.
 
 1. 선언 단계: 변수명을 등록한다.
@@ -30,7 +30,7 @@ var foo;
 즉, foo를 선언하기만 해도 곧장 `undefined`라는 값이 할당되는 것이다.
 
 
-### 변수 호이스팅
+## 변수 호이스팅
 자바스크립트 엔진은 **소스 코드 평가 과정**을 먼저 수행한 뒤, **런타임**을 실행한다.
 
 1. 소스 코드 평가 과정: 모든 선언문(변수 선언문, 함수 선언문 등)을 찾아내서 먼저 실행
@@ -53,7 +53,7 @@ var foo;
 이와 같은 특징을 변수 호이스팅(variable hoisting)이라고 한다.  
 모든 선언문은 이에 해당된다. var뿐만 아니라 let, const, function, function*, class 등으로 선언된 모든 경우도 그렇다.
 
-### 값의 할당
+## 값의 할당
 
 ```js
 1 var foo;
